update layout styles/structures

--- a/Frontend/app/src/app/layout/app.layout.component.html
+++ b/Frontend/app/src/app/layout/app.layout.component.html
@@ -1,1 +1,11 @@
-<router-outlet />
+<div class="layout-wrapper">
+  <div class="layout-sidebar">
+    <app-sidebar />
+  </div>
+  <div class="layout-main-container">
+    <div class="layout-main">
+      <p>layout work!</p>
+      <router-outlet />
+    </div>
+  </div>
+</div>
