--- a/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.css
+++ b/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.css
@@ -3,8 +3,18 @@
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   padding: 2rem 1.5rem;
+}
+
+.sidebar-logotype {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.logotype {
+  width: 150px;
 }
 
 .sidebar-main-container {
@@ -15,6 +25,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 5px;
 }
 
 .sidebar-item:last-child {
@@ -44,7 +55,7 @@
 }
 
 .active {
-  background-color: rgb(46, 46, 51);
+  background-color: #dedede;
   border-radius: 5px;
   color: #000000;
 }
