--- a/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.html
+++ b/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar-wrapper">
   <div class="sidebar-logotype">
-    <img src="../../../../assets/logo.png" alt="logotype" width="120px" />
+    <img src="../../../../assets/logo.png" alt="logotype" class="logotype" />
   </div>
   <div class="sidebar-main-container">
     <div class="sidebar-main">
