--- a/Frontend/app/src/app/demo/pages/resume/resume.component.html
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.html
@@ -5,38 +5,24 @@
       <form [formGroup]="registerForm">
         <mat-form-field>
           <mat-label>Nombre</mat-label>
-          <input matInput formControlName="nombre" />
+          <input matInput formControlName="firstName" />
         </mat-form-field>
         <br />
         <mat-form-field>
           <mat-label>Apellidos</mat-label>
-          <input matInput formControlName="apellidos" />
+          <input matInput formControlName="lastName" />
         </mat-form-field>
         <br />
         <mat-form-field>
           <mat-label>Correo electrónico</mat-label>
-          <input matInput formControlName="correoElectronico" />
+          <input matInput formControlName="contactEmail" />
         </mat-form-field>
         <br />
         <mat-form-field>
           <mat-label>Teléfono</mat-label>
-          <input matInput formControlName="telefono" />
+          <input matInput formControlName="contactPhone" />
         </mat-form-field>
         <br />
-        <mat-form-field>
-          <mat-label>Dirección</mat-label>
-          <input matInput formControlName="dirección" />
-        </mat-form-field>
-        <br />
-        <mat-form-field>
-          <mat-label>CódigoPostal</mat-label>
-          <input matInput formControlName="codigoPostal" />
-        </mat-form-field>
-        <br />
-        <mat-form-field>
-          <mat-label>Localidad</mat-label>
-          <input matInput formControlName="localidad" />
-        </mat-form-field>
       </form>
     </div>
     <br />
