--- a/Frontend/app/src/app/layout/app.layout.component.html
+++ b/Frontend/app/src/app/layout/app.layout.component.html
@@ -5,8 +5,9 @@
   <div class="layout-main-container">
     <div class="layout-main">
       <router-outlet />
+      <app-floating-button *ngIf="showButton" />
     </div>
   </div>
 
-  <app-floating-button *ngIf="showButton" />
+  <app-loading *ngIf="isLoading" />
 </div>
