--- a/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.html
+++ b/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.html
@@ -15,7 +15,7 @@
             [src]="menuItem.icon"
             alt="{{ menuItem.title }} icon"
           />
-          {{ menuItem.title }}
+          <span class="sidebar-text">{{ menuItem.title }}</span>
         </a>
       </div>
     </div>
