Interfaces y form por cada sección

--- a/Frontend/app/src/app/demo/pages/resume/resume.component.html
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h1 class="text-center">Datos personales</h1>
     <div class="text-center">
-      <form [formGroup]="registerForm">
+      <form [formGroup]="resumeForm">
         <mat-form-field>
           <mat-label>Nombre</mat-label>
           <input matInput formControlName="firstName" />
