--- a/Frontend/app/src/app/demo/pages/resume/resume.component.css
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.css
@@ -1,3 +1,36 @@
-mat-slider {
+/* mat-slider {
     width: 300px;
+} */
+
+.layout-resume {
+  display: flex;
+}
+.layout-form {
+  width: 100%;
+  max-height: 100vh;
+  padding: 2rem;
+  overflow-y: auto;
+}
+
+.layout-preview {
+  width: 100%;
+  max-width: 40%;
+}
+
+.button-floating {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  z-index: 100;
+  padding: 1rem;
+  border-radius: 10px;
+  background-color: #3f51b5;
+  color: #fff;
+  border: none;
+  outline: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
+}
+.button-floating:hover {
+  background-color: #303f9f;
 }
