--- a/Frontend/app/src/app/demo/pages/resume/resume.component.html
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.html
@@ -1,170 +1,145 @@
-<div class="container d-flex justify-content-center">
-  <div class="col-md-6">
-    <h1 class="text-center">Datos personales</h1>
-    <div class="text-center">
-      <form [formGroup]="resumeForm">
-        <mat-form-field>
-          <mat-label>Nombre</mat-label>
-          <input matInput formControlName="firstName" />
-        </mat-form-field>
-        <br />
-        <mat-form-field>
-          <mat-label>Apellidos</mat-label>
-          <input matInput formControlName="lastName" />
-        </mat-form-field>
-        <br />
-        <mat-form-field>
-          <mat-label>Correo electrónico</mat-label>
-          <input matInput formControlName="contactEmail" />
-        </mat-form-field>
-        <br />
-        <mat-form-field>
-          <mat-label>Teléfono</mat-label>
-          <input matInput formControlName="contactPhone" />
-        </mat-form-field>
-        <br />
-        <h1 class="text-center">Formación</h1>
-        <br />
-        <mat-form-field>
-          <mat-label>Institución</mat-label>
-          <input matInput formControlName="contactPhone" />
-        </mat-form-field>
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Formación</mat-label>
-          <input matInput formControlName="contactPhone" />
-        </mat-form-field>
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Fecha de inicio</mat-label>
-          <input matInput [matDatepicker]="pickerInicioFormacion" />
-          <mat-datepicker-toggle
-            matIconSuffix
-            [for]="pickerInicioFormacion"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #pickerInicioFormacion></mat-datepicker>
-        </mat-form-field>
+<div class="layout-resume">
+  <div class="layout-form">
+    <h1 class="h3">Curriculum Vitae</h1>
+    <div class="py-4">
+      <div>
+        <form [formGroup]="resumeForm">
+          <div class="d-flex flex-column mb-4">
+            <h1 class="h5 fw-normal pb-2">Datos personales</h1>
+            <mat-form-field>
+              <mat-label>Nombres</mat-label>
+              <input matInput formControlName="firstName" />
+            </mat-form-field>
 
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Fecha de finalización</mat-label>
-          <input matInput [matDatepicker]="pickerFinFormacion" />
-          <mat-datepicker-toggle
-            matIconSuffix
-            [for]="pickerFinFormacion"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #pickerFinFormacion></mat-datepicker>
-        </mat-form-field>
+            <mat-form-field>
+              <mat-label>Apellidos</mat-label>
+              <input matInput formControlName="lastName" />
+            </mat-form-field>
 
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Descripción</mat-label>
-          <textarea matInput></textarea>
-        </mat-form-field>
-        <br />
-        <h1 class="text-center">Experiencia</h1>
-        <br />
-        <mat-form-field>
-          <mat-label>Puesto</mat-label>
-          <input matInput formControlName="contactPhone" />
-        </mat-form-field>
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Empleador</mat-label>
-          <input matInput formControlName="contactPhone" />
-        </mat-form-field>
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Fecha de inicio</mat-label>
-          <input matInput [matDatepicker]="pickerInicioExp" />
-          <mat-datepicker-toggle
-            matIconSuffix
-            [for]="pickerInicioExp"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #pickerInicioExp></mat-datepicker>
-        </mat-form-field>
+            <mat-form-field>
+              <mat-label>Correo electrónico</mat-label>
+              <input matInput formControlName="contactEmail" />
+            </mat-form-field>
 
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Fecha de finalización</mat-label>
-          <input matInput [matDatepicker]="pickerFinExp" />
-          <mat-datepicker-toggle
-            matIconSuffix
-            [for]="pickerFinExp"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #pickerFinExp></mat-datepicker>
-        </mat-form-field>
-
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Descripción</mat-label>
-          <textarea matInput></textarea>
-        </mat-form-field>
-        <br />
-        <h1 class="text-center">Proyectos</h1>
-        <br />
-        <mat-form-field>
-          <mat-label>Nombre de proyecto</mat-label>
-          <input matInput formControlName="contactPhone" />
-        </mat-form-field>
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Fecha de inicio</mat-label>
-          <input matInput [matDatepicker]="pickerInicioProyecto" />
-          <mat-datepicker-toggle
-            matIconSuffix
-            [for]="pickerInicioProyecto"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #pickerInicioProyecto></mat-datepicker>
-        </mat-form-field>
-
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Fecha de finalización</mat-label>
-          <input matInput [matDatepicker]="pickerFinProyecto" />
-          <mat-datepicker-toggle
-            matIconSuffix
-            [for]="pickerFinProyecto"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #pickerFinProyecto></mat-datepicker>
-        </mat-form-field>
-
-        <br />
-        <br />
-        <mat-form-field>
-          <mat-label>Descripción</mat-label>
-          <textarea matInput></textarea>
-        </mat-form-field>
-        <br />
-        <h1 class="text-center">Competencias</h1>
-        <br />
-        <mat-form-field>
-          <mat-label>Habilidad</mat-label>
-          <input matInput formControlName="contactPhone" />
-        </mat-form-field>
-        <br />
-        <mat-label>Nivel</mat-label>
-        <mat-slider>
-          <input matSliderThumb />
-        </mat-slider>
-        <br />
-      </form>
+            <mat-form-field>
+              <mat-label>Teléfono</mat-label>
+              <input matInput formControlName="contactPhone" />
+            </mat-form-field>
+          </div>
+          <div class="d-flex flex-column mb-4">
+            <h1 class="h5 fw-normal pb-2">Formación</h1>
+            <mat-form-field>
+              <mat-label>Institución</mat-label>
+              <input matInput formControlName="contactPhone" />
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Formación</mat-label>
+              <input matInput formControlName="contactPhone" />
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Fecha de inicio</mat-label>
+              <input matInput [matDatepicker]="pickerInicioFormacion" />
+              <mat-datepicker-toggle
+                matIconSuffix
+                [for]="pickerInicioFormacion"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #pickerInicioFormacion></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Fecha de finalización</mat-label>
+              <input matInput [matDatepicker]="pickerFinFormacion" />
+              <mat-datepicker-toggle
+                matIconSuffix
+                [for]="pickerFinFormacion"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #pickerFinFormacion></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Descripción</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+          </div>
+          <div class="d-flex flex-column mb-4">
+            <h1 class="h5 fw-normal pb-2">Experiencia</h1>
+            <mat-form-field>
+              <mat-label>Puesto</mat-label>
+              <input matInput formControlName="contactPhone" />
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Empleador</mat-label>
+              <input matInput formControlName="contactPhone" />
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Fecha de inicio</mat-label>
+              <input matInput [matDatepicker]="pickerInicioExp" />
+              <mat-datepicker-toggle
+                matIconSuffix
+                [for]="pickerInicioExp"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #pickerInicioExp></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Fecha de finalización</mat-label>
+              <input matInput [matDatepicker]="pickerFinExp" />
+              <mat-datepicker-toggle
+                matIconSuffix
+                [for]="pickerFinExp"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #pickerFinExp></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Descripción</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+          </div>
+          <div class="d-flex flex-column mb-4">
+            <h1 class="h5 fw-normal pb-2">Proyectos</h1>
+            <mat-form-field>
+              <mat-label>Nombre de proyecto</mat-label>
+              <input matInput formControlName="contactPhone" />
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Fecha de inicio</mat-label>
+              <input matInput [matDatepicker]="pickerInicioProyecto" />
+              <mat-datepicker-toggle
+                matIconSuffix
+                [for]="pickerInicioProyecto"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #pickerInicioProyecto></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Fecha de finalización</mat-label>
+              <input matInput [matDatepicker]="pickerFinProyecto" />
+              <mat-datepicker-toggle
+                matIconSuffix
+                [for]="pickerFinProyecto"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #pickerFinProyecto></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Descripción</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+          </div>
+          <div class="d-flex flex-column mb-4">
+            <h1 class="h5 fw-normal pb-2">Competencias</h1>
+            <mat-form-field>
+              <mat-label>Habilidad</mat-label>
+              <input matInput formControlName="contactPhone" />
+            </mat-form-field>
+            <mat-label>Nivel</mat-label>
+            <mat-slider>
+              <input matSliderThumb />
+            </mat-slider>
+          </div>
+        </form>
+      </div>
     </div>
-    <br />
-    <div class="text-center">
-      <button mat-raised-button color="primary" (click)="register()">
-        Guardar
-      </button>
-    </div>
+  </div>
+  <div class="layout-preview">
+    <app-preview></app-preview>
+    <button (click)="register()" class="button-floating">
+      Guardar cambios
+    </button>
   </div>
 </div>
