--- a/Frontend/app/src/app/demo/components/preview/preview.component.html
+++ b/Frontend/app/src/app/demo/components/preview/preview.component.html
@@ -1,23 +1,40 @@
 <div class="layout-preview">
-  <div class="container p-5 rounded-5 h-100">
-    <div class="container bg-body-secondary h3 p-3">Curriculum test</div>
-    <div>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem
-      consequatur rerum hic, cupiditate voluptate eos cumque ratione placeat
-      earum voluptates corrupti culpa expedita explicabo neque sit veritatis.
-      Sint, aspernatur beatae? Soluta veniam quia esse consequuntur aliquam
-      tenetur velit exercitationem. Aliquam aut consectetur excepturi, sint hic
-      ad recusandae eligendi quod iure unde fugiat illum numquam at quidem sed
-      facere natus quia! Accusamus, deserunt dolore est consequuntur ipsam
-      perspiciatis. Reiciendis cum non pariatur, officia nemo ad corrupti optio
-      maiores facilis quasi in maxime nostrum incidunt aliquid, nihil, et
-      commodi veniam perspiciatis tempore. Odio mollitia laborum voluptatibus
-      voluptatum, ipsum vero repellat excepturi? Fuga in doloremque, corrupti,
-      blanditiis ea sequi rem alias consequuntur repellat eligendi distinctio
-      rerum dolore praesentium debitis eveniet, vel necessitatibus! Odit! Quas
-      labore sequi officiis explicabo repellat qui dolore culpa corporis impedit
-      odio vero error in non possimus totam accusamus, aliquid eius nobis
-      provident, aut doloribus nihil est.
+  <div>
+    <div class="h3 p-3">Curriculum Vitae</div>
+    <div class="d-flex py-2 flex-column px-3">
+      <p class="text-muted py-1 m-0">Datos personales:</p>
+      <p class="m-0">Nombres</p>
+      <p class="m-0">Apellidos</p>
+      <p class="m-0">Correo electrónico</p>
+      <p class="m-0">Télefono</p>
+    </div>
+    <div class="d-flex py-2 flex-column px-3">
+      <p class="text-muted py-1 m-0">Formación:</p>
+      <p class="m-0">Institución</p>
+      <p class="m-0">Formación</p>
+      <p class="m-0">Fecha de inicio</p>
+      <p class="m-0">Fecha de finalización</p>
+      <p class="m-0">Descripción</p>
+    </div>
+    <div class="d-flex py-2 flex-column px-3">
+      <p class="text-muted py-1 m-0">Experiencia:</p>
+      <p class="m-0">Puesto</p>
+      <p class="m-0">Empleador</p>
+      <p class="m-0">Fecha de inicio</p>
+      <p class="m-0">Fecha de finalización</p>
+      <p class="m-0">Descripción</p>
+    </div>
+    <div class="d-flex py-2 flex-column px-3">
+      <p class="text-muted py-1 m-0">Proyectos:</p>
+      <p class="m-0">Nombre de proyecto</p>
+      <p class="m-0">Fecha de inicio</p>
+      <p class="m-0">Fecha de finalización</p>
+      <p class="m-0">Descripción</p>
+    </div>
+    <div class="d-flex py-2 flex-column px-3">
+      <p class="text-muted py-1 m-0">Competencias:</p>
+      <p class="m-0">Habilidad</p>
+      <p class="m-0">Nivel</p>
     </div>
   </div>
 </div>
