--- a/Frontend/app/src/app/demo/pages/resume/resume.component.css
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.css
@@ -15,6 +15,7 @@
 .layout-preview {
   width: 100%;
   max-width: 40%;
+  background-color: #000000;
 }
 
 .button-floating {
@@ -22,9 +23,9 @@
   bottom: 2rem;
   right: 2rem;
   z-index: 100;
-  padding: 1rem;
+  padding: 10px;
   border-radius: 10px;
-  background-color: #3f51b5;
+  background-color: #000000;
   color: #fff;
   border: none;
   outline: none;
@@ -32,5 +33,5 @@
   transition: all 0.3s ease-in-out;
 }
 .button-floating:hover {
-  background-color: #303f9f;
+  background-color: #242424;
 }
