update structure preview

--- a/Frontend/app/src/app/demo/components/preview/preview.component.html
+++ b/Frontend/app/src/app/demo/components/preview/preview.component.html
@@ -1,5 +1,5 @@
-<div class="layout-preview">
-  <div>
+<div class="layout-preview bg-body-secondary">
+  <div class="h-100 bg-white shadow-sm p-2">
     <div class="h3 p-3">Curriculum Vitae</div>
     <div class="d-flex py-2 flex-column px-3">
       <p class="text-muted py-1 m-0">Datos personales:</p>
