--- a/Frontend/app/src/app/demo/components/preview/preview.component.html
+++ b/Frontend/app/src/app/demo/components/preview/preview.component.html
@@ -3,7 +3,7 @@
     <div class="h3 p-3">Curriculum Vitae</div>
     <div class="d-flex py-2 flex-column px-3">
       <p class="text-muted py-1 m-0">Datos personales:</p>
-      <p class="m-0">Nombres</p>
+      <p class="m-0">Nombres: {{firstName}}</p>
       <p class="m-0">Apellidos</p>
       <p class="m-0">Correo electrónico</p>
       <p class="m-0">Télefono</p>
