--- a/Frontend/app/src/app/demo/pages/resume/resume.component.css
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.css
@@ -43,6 +43,11 @@
 }
 
 .subform {
-  justify-content: space-between 5px;
-  justify-items: 5px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Divide en dos columnas de igual tamaño */
+  gap: 20px; /* Espacio entre los elementos */
+}
+
+.mat-form-field {
+  width: 100%; /* Asegura que los campos ocupen todo el ancho de su contenedor */
 }
