login v1.0 falta id user en respuesta

--- a/Frontend/app/src/app/auth/components/login-form/login-form.component.html
+++ b/Frontend/app/src/app/auth/components/login-form/login-form.component.html
@@ -7,7 +7,7 @@
         <input
           matInput
           placeholder="Ingrese su usuario"
-          formControlName="email"
+          formControlName="user"
           type="text"
           required
         />
