--- a/Frontend/app/src/app/demo/pages/home/home.component.html
+++ b/Frontend/app/src/app/demo/pages/home/home.component.html
@@ -39,16 +39,58 @@
           Nombre del curriculum
         </th>
         <td mat-cell *matCellDef="let row">
-          {{ row.Resumes.firstName }} {{ row.Resumes.lastName }}
+          {{ row.firstName }} {{ row.lastName }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="edit">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="text-secondary fw-normal"
+        >
+          Editar
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            mat-raised-button
+            color="primary"
+            (click)="editResume(row.id)"
+          >
+            Editar
+          </button>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="delete">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="text-secondary fw-normal"
+        >
+          Eliminar
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            mat-raised-button
+            color="primary"
+            (click)="deleteResume(row.id)"
+          >
+            Eliminar
+          </button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="2" class="p-3">
-          <span>No hay información para mostrar</span>
-        </td>
+        <td class="mat-cell" colspan="12">No hay registros</td>
       </tr>
     </table>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+    >
+    </mat-paginator>
   </div>
 </div>
