--- a/Frontend/app/src/app/demo/pages/resume/resume.component.css
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.css
@@ -24,10 +24,13 @@
   bottom: 2rem;
   right: 2rem;
   z-index: 100;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: #000000;
-  color: #fff;
+  padding: 15px;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   outline: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -38,13 +41,16 @@
   background-color: #242424;
 }
 
-.mat-mdc-form-field+.mat-mdc-form-field {
+.mat-mdc-form-field + .mat-mdc-form-field {
   margin-left: 8px;
 }
 
 .subform {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Divide en dos columnas de igual tamaño */
+  grid-template-columns: repeat(
+    2,
+    1fr
+  ); /* Divide en dos columnas de igual tamaño */
   gap: 20px; /* Espacio entre los elementos */
 }
 
@@ -52,6 +58,6 @@
   width: 100%; /* Asegura que los campos ocupen todo el ancho de su contenedor */
 }
 
-.btnEditar{
+.btnEditar {
   margin-left: 2%;
 }
