--- a/Frontend/app/src/app/demo/pages/resume/resume.component.html
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.html
@@ -433,8 +433,8 @@
   </div>
   <div class="layout-preview">
     <app-preview></app-preview>
-    <button (click)="saveResume()" class="button-floating">
-      Guardar cambios
+    <button (click)="saveResume()" class="button-floating bg-primary">
+      <mat-icon class="text-light">save</mat-icon>
     </button>
   </div>
 </div>
